samples/_failures_safe/1761641329_6f861d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7785ef48.c: In function ‘main’:
./samples/SAFE/__tmp_7785ef48.c:157:9: error: expected declaration or statement at end of input
  157 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_7785ef48.c:157:9: error: expected declaration or statement at end of input
